@startuml
title Domänenmodell – Habitree

skinparam classAttributeIconSize 0

'=======================
' Hauptklassen (Kernmodell)
'=======================

class User {
  - id: Int
  - email: String
  - username: String
  - passwordHash: String
  - createdAt: DateTime
  - currentStreak: Int
  - maxStreak: Int
}

class Habit {
  - id: Int
  - name: String
  - description: String?
  - frequency: String
  - startDate: DateTime
  - time: String
  - weekDays: Int[]
  - intervalDays: Int?
  - durationDays: Int?
  - createdAt: DateTime
  - currentStreak: Int
  - maxStreak: Int
  - isHarvested: Int (0=Nein, 1=Wachsend, 2=Geerntet)
}

class HabitEntry {
  - id: Int
  - date: DateTime
  - status: Boolean
  - note: String?
}

class PredefinedHabit {
  - id: Int
  - name: String
  - description: String
  - frequency: String
}

class Quote {
  - id: Int
  - quote: String
}

'=======================
' Beziehungen
'=======================

User "1" *-- "0..*" Habit : besitzt >
User "1" -- "0..*" HabitEntry : hat >

PredefinedHabit "0..1" -- "0..*" Habit : dient als Vorlage für >
Habit "1" *-- "0..*" HabitEntry : enthält >

@enduml
